# django_earthquake

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
django_earthquake/: asgi.py  settings.py  urls.py  wsgi.py
django_earthquake/management/commands/: create_superuser.py
earthquakes/: admin.py  models.py  serializers.py  urls.py  views.py
earthquakes/migrations/: 0001_initial.py  0002_initial_cities.py
earthquakes/templates/admin/admin/: index.html
earthquakes/templates/admin/earthquakes/: app_index.html
earthquakes/templates/admin/earthquakes/searchresult/: change_list.html
earthquakes/templates/earthquakes/: search.html  search_results.html
earthquakes/tests/: test_api.py  test_models.py  test_views.py
